# nconpp

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  README.md  Test_Dev.ipynb  Test_Run.ipynb  backup.CMakeUserPresets.json  build.py  pyproject.toml  pyproject.toml.backup  qmbs.ipynb  requirements.dev.txt  requirements.txt  setup.py  tasks.py  vcpkg.json
.github/workflows/: ci-cpp.yml  ci-python.yml  ci.yml
cmake/: __init__.cmake  googletest.cmake  python.cmake
core/: CMakeLists.txt  Nconpp.cpp  Nconpp.h  NetworkContractor.cpp  NetworkContractor.h
core/include/: Algorithms.h  Container.h  Graph.h  Network.h  Search.h  Tensor.h  TensorNetwork.h  Utils.h
core/src/: Algorithms.cpp  Graph.cpp  Network.cpp  Search.cpp  TensorNetwork.cpp  Utils.cpp
core/utils/: Container.h  Tensor.h
cpp/src/: ErrorMessages.hpp  Graph.hpp  LatticeGraph.hpp  Tensor.hpp  TensorNetwork.hpp
cpp/test/: GraphTest.cpp  LatticeGraphTest.cpp  TensorNetworkTest.cpp  TensorTest.cpp  googletest.cmake  nconpp_tests_run.cpp
docker/: Dockerfile
docs/: Doxyfile  graphs.md
docs/html/: index.html
include/: Error.h  ErrorMessages.h  Graph.h  Graph.h.backup  Graph.h.new  GraphNew.h  LatticeGraph.h  LogMessages.h  Nconpp.h  Tensor.h  TensorLinAlg.h  TensorNetwork.h  TensorNetwork.h.new.backup  TensorNetwork.h.old  nblas.h  nlinalg.h
lib/: Nconpp.cpp  Nconpp.h
misc/python/notebooks/: 02_finitestatemachines.ipynb
misc/python/notebooks/images/: fsm  mpd_nnn
misc/python/notebooks/modules/: mpo.py
misc/python/src/: nconpp.cpp
misc/python/test/: test_graph.py
nconpp/: CMakeLists.txt  NetworkContractor.cpp  NetworkContractor.h
nconpp-python/: CMakeLists.txt  RELEASE.md  Test_Run.ipynb  main.cpp  setup.py
nconpp-python/docs/: conf.py
nconpp-python/nconpp/: __init__.py
nconpp-python/src/: main.cpp
nconpp-python/src/nconpp/: __init__.py
nconpp-python/tests/: test_extension.py
nconpp/include/: Algorithms.h  Container.h  ErrorMessages.h  Graph.h  Network.h
nconpp/src/: Algorithms.cpp  Graph.cpp  Network.cpp
nconpp/utils/: ErrorMessages.h  Tensor.h
py/: CMakeLists.txt
py/src/: main.cpp
py/src/nconpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pybind/: main.cpp
python/: 00_nbtdd.ipynb  00_tdd.ipynb  01_mpo_qmbs.ipynb  CMakeLists.txt  README.md  Test_Dev.ipynb  Test_Run.ipynb  build.py  main.cpp  pyproject.toml  pyproject.toml.bac  python.cmake  setup.py  setup.py.bac
python/docs/: index.rst  nconpp.rst
python/nconpp/: __init__.py  data.py  dmrg.py  eigensolver.py  gates.py  latticegraph.py  linalg.py  mpo.py  mps.py  nconpp.cpp  observable.py  operations.py  operator.py  tebd.py  tensornetwork.py
python/nconpp/backup/: lattice.py
python/nconpp/backup/algorithm/: dmrg.py  tebd.py
python/nconpp/backup/linalg/: eigensolver.py  toolbox.py
python/nconpp/backup/modules/: __init__.py  data.py  latticegraph.py  mpo.py  mps.py  operator.py  tensornetwork.py
python/notebooks/: 00_matrixproducts.ipynb  00_tdd.ipynb  00_tensornetworks.ipynb  01_matrixproducts.ipynb  01_qmbs.ipynb  01_tensornetworks.ipynb  02_finitestatemachines.ipynb  02_qmbs.ipynb  0x_dmrg.ipynb  matrixproducts.py  xy_general_k_body_hamiltonian.ipynb
python/notebooks/examples/: 01_ising_model.ipynb  02_heisenberg_model.ipynb  03_bond_alternating_heisenberg_model.ipynb  LatticeGraphs_tests.ipynb  PyLatticeGraphs_tests.ipynb  core.py  dmrg.py  latticegraph.py  mpo.py  mps.py  tensornetwork.py
python/notebooks/examples/purepython/: latticegraph.py
python/notebooks/images/: fsm  mpd_nn
python/notebooks/modules/: mpo.py  tennet.py
python/requirements/: dev.txt  prod.txt
python/src/: BindingWithConstraints.h  __init__.py  binding.h  main.cpp  nconpp.cpp
python/src/nconpp/: __init__.py
python/test/: test_graph.py  test_tensornetwork.py
python/tests/: nconpp_tests.py
src/: ErrorMessages.hpp  Graph.cpp  Graph.hpp  LatticeGraph.h  LatticeGraph.hpp  Tensor.cpp  Tensor.h  Tensor.hpp  TensorNetwork.cpp  TensorNetwork.hpp
test/: CMakeLists.txt  GraphNewTest.cpp  GraphTest.cpp  GraphTest.cpp.backup  GraphTest_F.cpp  LatticeGraphTest.cpp  OLD_GraphTest_F.cpp  TensorNetworkTest.cpp  TensorTest.cpp  googletest.cmake  nconpp_test.cpp  nconpp_tests_run.cpp
test/ut/: GraphTest.cpp  NconppTest.cpp  NetworkTest.cpp  TensorNetworkTest.cpp  TensorTest.cpp  nconppTest.cpp  networkTest.cpp
