[tool.poetry]
name = "python/nconpp"
version = "0.1.0"
description = "Library for Tensor Network calculations."
authors = ["Mirco Marahrens <mirco.marahrens@googlemail.com>"]
license = "License :: OSI Approved :: Apache Software License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
pybind11 = "^2.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
