[project]
name = "nconpp"
version = "0.1.0"
description="A library for tensor network calculations."
readme = "README.md"
authors = [
    { name = "Mirco Marahrens", email = "mirco.marahrens@googlemail.com" },
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = [
    "scikit-build-core>=0.2.2",
    "numpy>=1.24.2"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.install-dir = "nconpp"
minimum-version = "0.2.2"
build-dir = "out/build/python"
cmake.args = [
    "-DCMAKE_TOOLCHAIN_FILE=/home/mircomarahrens/.local/vcpkg/scripts/buildsystems/vcpkg.cmake",
    "-DCMAKE_BUILD_TYPE=Python"
    ]
cmake.minimum-version = "3.26.1"
cmake.verbose = true
ninja.make-fallback = false
ninja.minimum-version = "1.11"
logging.level = "INFO"


[tool.poetry]
name = "nconpp"
version = "0.1.0"
description = "A library for tensor network calculations."
authors = ["Mirco Marahrens <mirco.marahrens@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cmake = "^3.28.1"
numpy = "^1.26.3"
pybind11 = {extras = ["global"], version = "^2.11.1"}
scikit-build = "^0.17.6"
ninja = "^1.11.1.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
ipywidgets = "^8.1.1"
ipympl = "^0.9.3"
graphviz = "^0.20.1"
sympy = "^1.12"
invoke = "^2.2.0"
gitpython = "^3.1.41"
